k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jerney
  # labels:
  #   env: prod
