k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jerney-ingress
  labels:
    app: myingress
  namespace: jerney
spec:
  rules:
    - host: jerney.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

# Working:

# http://jerney.local
#         ↓
# Ingress Controller
#         ↓
# Ingress Rule
#         ↓
# frontend-service:80
#         ↓
# frontend pod (nginx)
#         ↓
# backend-service
#         ↓
# backend pod

# http://jerney.local  -> Configure in the system if using minikube
# Edit: C:\Windows\System32\drivers\etc\hosts
# Add: 127.0.0.1 jerney.local
